# FourierDiffusion

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  wasserstein_example.ipynb
.github/workflows/: python-app.yml
cmd/: run.sh  sample.py  train.py
cmd/conf/: sample.yaml  train.yaml
cmd/conf/datamodule/: ecg.yaml  mimiciii.yaml  nasa.yaml  nasdaq.yaml  synthetic.yaml  usdroughts.yaml
cmd/conf/metrics/: default.yaml
cmd/conf/sampler/: default.yaml
cmd/conf/score_model/: default.yaml  lstm.yaml  mlp.yaml
cmd/conf/score_model/noise_scheduler/: customddpm.yaml  ddpm.yaml  vesde.yaml  vpsde.yaml
cmd/conf/trainer/: default.yaml
cmd/conf/trainer/callbacks/: default.yaml
debugging/: distances.npy  fourier_debugging.ipynb  matmul.ipynb  sample.py
fdiff/dataloaders/: datamodules.py
fdiff/models/: transformer.py
fdiff/utils/: dataclasses.py
notebooks/: droughts_exploration.ipynb  mimic_exploration.ipynb  nasa_exploration.ipynb  nasdaq_exploration.ipynb  results.ipynb  results_lstm.ipynb  spectral_interpretation.ipynb  viz.ipynb  wasserstein_example.ipynb
src/dataloaders/: datamodules.py
src/fdiff/dataloaders/: datamodules.py
src/fdiff/models/: score_models.py  transformer.py
src/fdiff/sampling/: metrics.py  sampler.py  sde_lib.py
src/fdiff/schedulers/: custom_ddpm_scheduler.py  ddpm.py  sde.py  vesde_scheduler.py  vpsde_scheduler.py
src/fdiff/utils/: callbacks.py  dataclasses.py  extraction.py  fourier.py  losses.py  preprocessing.py  tensors.py  wandb.py  wasserstein.py
src/models/: sampler.py  score_models.py  transformer.py
src/sampling/: sampler.py
src/utils/: dataclasses.py  extraction.py  wandb.py
src/utils/wasserstein/: wasserstein.py
tests/: test_datamodules.py  test_hydra_configs.py  test_metrics.py  test_sampling.py  test_schedulers.py  test_score_models.py  test_transformer.py  test_utils.py
